yoshimi 2.3.1 M

Changed Presets internal name "presets" to "params"
Changed "PresetsUpdate" to "ParamsUpdate"
Changed "changePresets" to "changeParams"

2023-11-14 Will
bn 2283
BugFix: copy/paste not recognising effect numbers
Title of copy/paste now indicates section
Some GUI display cleanups

2023-11-13 Will
bn 2282
BugFix: copy/paste GUI 'Type' field only correct on first call
Removed all of old presets code except PresetsUpdate(
Some cleanups and extra comments in UnifiedPresets

2023-11-11 Will
bn 2281
Added 'design Notes' file to Yoshimi Control Data
    also a few more clarifications

2023-11-10 Will
bn 2280
BugFix: copy/paste assuming text returned in text message 0
Resolved ambiguities in Yoshimi Control Data
Added copy/paste details

2023-11-09 Will
bn 2279
HTML "Yoshimi Control Data" now complete to replace .ods file.
Removed ambiguity in CBtest
    default is to *not* display text from miscMsg
Forgot to disable effects patch in Interchange :(

2023-11-07 Will
bn 2278
BugFix: Wrong spelling in lists for amplitude LFO.
BufFix: Ucopy/Upaste type text not updating
GUI unified presets done for LFOs
GUI unified presets done for Envelopes
GUI unified presets done for Filters
GUI unified presets done for Effects
Some UI cleanups

2023-11-06 Will
bn 2277
GUI unified presets done for Resonance and Waveform.
Further work on Yoshimi Controls.

2023-11-04 Will
bn 2276
Changed midi CC conversion names from ~Inner to more meaningful ~Adjusted
Further work on HTML Yoshimi Controls (not now updating old .ods file)

2023-11-03 Will
bn 2275
GUI unified presets complete for AddSynth, AddVoice, SubSynth, Padsynth
Started building HTML version of Control values to replace .ods version
    (with additions and corrections)

2023-10-31 Will
bn 2274
Further revisions to unified presets, now also applied to Padsynth.
Human friendly preset group Gui field in window now done
Outline code in place for deleteing entries from the Gui

[presets]